prevent do items to overlap each other.

--- a/app/styles/components/do.scss
+++ b/app/styles/components/do.scss
@@ -20,6 +20,7 @@ $done-text-color: #22AA22;
   left: 0px;
   right: 0px;
   padding: 10px;
+  box-sizing: border-box;
   cursor: -moz-grab;
   cursor: -webkit-grab;
 
